--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ deploy:
   region: "us-east-1"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-us-east-1-061949854834"
-  # bucket_path: "docker-react"
+  bucket_name: "elasticbeanstalk-us-east-1-061949854834"  
+  bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
