--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,8 @@ deploy:
   region: "us-east-1"
   app: "docker-react"
   env: "DockerReact-env"
-  # edge: true
-  # bucket_name: "elasticbeanstalk-us-east-1-061949854834"
-  bucket: "elasticbeanstalk-us-east-1-061949854834"
+  edge: true
+  bucket_name: "elasticbeanstalk-us-east-1-061949854834"
   bucket_path: "docker-react"
   on:
     branch: master
